= Changelog for Libarchive/Ruby/SWIG

== 27 Feb 2011 - 12:36:00 +0200 - Tobias Koch <tobias.koch@gmail.com>

* allow reading of entry filetype

== 16 Feb 2011 - 20:00:00 +0200 - Tobias Koch <tobias.koch@gmail.com>

* calling read_data without argument returns full entry

== 12 Feb 2011 - 09:15:00 +0200 - Tobias Koch <tobias.koch@gmail.com>

* documentation updates

== 07 Feb 2011 - 23:22:00 +0200 - Tobias Koch <tobias.koch@gmail.com>

* add testsuite
* add Rakefile with tasks 'build', 'doc', 'gem', 'test' and 'clean'
* add stat wrapper to allow setting file types without copy_stat
* external decompression program can be used while reading archive

== 05 Feb 2011 - 23:04:00 +0200 - Tobias Koch <tobias.koch@gmail.com>

* add support for reading archive from memory

== 05 Feb 2011 - 19:58:00 +0200 - Tobias Koch <tobias.koch@gmail.com>

* use File::PATH_SEPARATOR instead of platform-dependant ':'
* raise error if external compression program is not in path
* add support for using an external compression program

== 30 Jan 2011 - 19:23:00 +0200 - Tobias Koch <tobias.koch@gmail.com>

* initial release
* basic support for reading and writing compressed archives 
* interface-compatible to libarchive-ruby
